@@ -4,7 +4,7 @@
 @author   mr@marcelruff.info
 
 @prepare  Linux:    cd ~/xmlBlaster; build c-lib; cd ~/xmlBlaster/src/csharp; ln -s ../../lib/libxmlBlasterClientCD.so .
-@compile  Linux:    mcs /unsafe /d:"XMLBLASTER_CLIENT_MONO" -debug+ -out:Hello.exe NativeC.cs XmlBlasterAccess.cs Hello.cs
+@compile  Linux:    mcs /unsafe /d:"XMLBLASTER_MONO" -debug+ -out:Hello.exe NativeC.cs XmlBlasterAccess.cs Hello.cs
 
 @prepare  Windows:  Compile the C client library first (see xmlBlaster\src\c\xmlBlasterClientC.sln)
 @compile  Windows:  csc /unsafe -debug+ -out:Hello.exe XmlBlasterAccess.cs PInvokeCE.cs Hello.cs
@@ -105,3 +105,4 @@ public class Hello : I_Callback
    }
    #endregion
 }
+
