@@ -3,7 +3,7 @@
 @comment  Access xmlBlaster from C# (Csharp)
 @author   mr@marcelruff.info
 @compile  csc /unsafe -debug+ -out:TestPInvoke.exe PInvokeCE.cs XmlBlasterAccess.cs TestPInvoke.cs
-          gmcs /unsafe /define:"XMLBLASTER_CLIENT_MONO;FORCE_PINVOKECE_PLUGIN" -debug+ -out:TestPInvoke.exe PInvokeCE.cs TestPInvoke.cs XmlBlasterAccess.cs
+          gmcs /unsafe /define:"XMLBLASTER_MONO;FORCE_PINVOKECE_PLUGIN" -debug+ -out:TestPInvoke.exe PInvokeCE.cs TestPInvoke.cs XmlBlasterAccess.cs
 @see      http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.csharp.html
 */
 using System;
